# plans-parser

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.export-agent  README.md  deploy.sh  docker-compose.yml  fake.py  graphene_arguments.patch  parser.py  pyproject.toml  requirements.txt  run-api.sh  run-export-agent.sh  run-seed.sh  run-tests.sh  sonar-project.properties
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  push_branch.yml
FastapiBack/app/: config.py  main.py
dacot_models/: setup.py
dacot_models/dacot_models/: models.py
dacot_parser/: __init__.py  schedules_extractor.py  telnet_command_executor.py  utc_plan_parser.py  utc_program_parser.py
deploy/: api_seed.py  mongo-setup.sh  patch-db.py  seed-db.py  seed_db_module.py
export-agent/: agent.py  dacot_parser  export-agent.py  notify-errors.py  requirements.txt  telnet_command_executor.py
export-agent/old_agent/: agent.py
export-agent/scripts/: RemoveAllNewProjects.py  SetDefaultVI_All.py
fastapi-backend/app/: config.py  main.py
fastapi_backend/app/: config.py  custom_graphql_app.py  db_init.py  (+3 more)
flask-backend/: jsonPOST.json
models/: example.py  models.py
parser/: telnet_command_executor.py  telnet_manager.py  utc_plan_parser.py  utc_program_parser.py
pdf-export/: export.py  format_factory.py  table-export.py
tests/: cmodels.csv  create_proj.json  example.py  juncs.csv  plans.txt  programs.txt  scheds.json  test_api.py  test_api_seed.py  test_plans_parser.py  test_program_parser.py  test_telnet_internet.py  test_telnet_uoct.py
(+38 files in other folders)
